add auth_server, cassandra, raw_website

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-/.idea/.gitignore
-/database/cassandra/out/cassandra_data/commitlog/CommitLog-7-1689959871570.log
+**/.idea/
+**/__pycache__
+database/cassandra/out
