--- a/mining/server/pyproject.toml
+++ b/mining/server/pyproject.toml
@@ -7,10 +7,14 @@ readme = "README.md"
 packages = [{include = "blockscrape_mining_server"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = "^0.100.0"
+python = "^3.10"
 redis = {extras = ["hiredis"], version = "^4.6.0"}
+python-socketio = "^5.8.0"
+pydantic = "^2.0.3"
 
+
+[tool.poetry.group.dev.dependencies]
+setuptools = "^68.0.0"
 
 [build-system]
 requires = ["poetry-core"]
