--- a/website/backend/pyproject.toml
+++ b/website/backend/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 uvicorn = "^0.23.1"
 fastapi = "^0.100.0"
 requests = "^2.31.0"
+cassandra-driver = "^3.28.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
