--- a/website/frontend/user-interface/.nginx/nginx.conf
+++ b/website/frontend/user-interface/.nginx/nginx.conf
@@ -8,8 +8,10 @@ http {
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
-        location /appui {
-            try_files $uri /index.html;
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html =404;
         }
     }
 }
