--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       interval: 15s
       timeout: 10s
       retries: 10
+    networks:
+      - website
+      - scheduling
+      - mining
 
   cassandra-load-keyspace:
     container_name: load-keyspace
@@ -28,6 +32,10 @@ services:
         delay: 5s
         max_attempts: 3
         window: 120s
+    networks:
+      - website
+      - scheduling
+      - mining
 
   react_ui:
     container_name: react-ui
@@ -39,6 +47,8 @@ services:
     depends_on:
       user_backend:
         condition: service_started
+    networks:
+      - website
 
   user_backend:
     build: ./website/backend
@@ -59,6 +69,8 @@ services:
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
+    networks:
+      - website
 
   auth_service:
     build: ./authentitication/server
@@ -76,3 +88,28 @@ services:
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
+    networks:
+      - mining
+      - website
+  mining_server:
+    build: ./mining/server
+    ports:
+      - "80:80"
+      - "443:443"
+    expose:
+      - 80
+      - 443
+    networks:
+      - mining
+      - scheduling
+  scheduling_service:
+    build: ./scheduling
+    networks:
+      - scheduling
+networks:
+  website:
+    external: true
+  scheduling:
+    external: false
+  mining:
+    external: true
