--- a/website/frontend/user-interface/package.json
+++ b/website/frontend/user-interface/package.json
@@ -9,7 +9,8 @@
     "@mantine/ds": "^6.0.17",
     "@mantine/form": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
-    "@tabler/icons-react": "^2.26.0",
+    "@mantine/notifications": "^6.0.17",
+    "@tabler/icons-react": "^2.30.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
