--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,8 @@ services:
       auth_service:
         condition: service_started
     command:
-      - "--authentication_uri=http://host.docker.internal:7979"
-      - "--cassandra_uri=host.docker.internal"
+      - "--authentication_uri=http://auth_service:7979"
+      - "--cassandra_uri=cassandra"
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
@@ -78,32 +78,47 @@ services:
       cassandra-load-keyspace:
         condition: service_completed_successfully
     command:
-      - "--cassandra_uri=host.docker.internal"
+      - "--cassandra_uri=cassandra"
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
     networks:
       - mining
       - website
-  mining_server:
-    build: ./mining/server
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - mining
-      - scheduling
+  #mining_server:
+  #  build: ./mining/server
+  #  ports:
+  #    - "80:80"
+  #    - "443:443"
+ #   networks:
+   #   - mining
+    #  - scheduling
+
   scheduling_service:
     build: ./scheduling
+    command:
+      - "--cassandra_uri=cassandra"
+      - "--cassandra_port=9042"
+      - "--cassandra_user=cassandra"
+      - "--cassandra_passwd=cassandra"
+      - "--redis_uri=scheduling_store"
+      - "--redis_port=6379"
     networks:
       - scheduling
-  mining_store:
-    image: redis:7.0-alpine
-    restart: always
-    environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-    ports:
-      - '6379:6379'
+    depends_on:
+      cassandra:
+        condition: service_healthy
+      cassandra-load-keyspace:
+        condition: service_completed_successfully
+      scheduling_store:
+        condition: service_started
+  #mining_store:
+  #  image: redis:7.0-alpine
+  #  restart: always
+  #  environment:
+  #    - ALLOW_EMPTY_PASSWORD=yes
+  #  ports:
+  #    - '6379:6379'
   scheduling_store:
     image: redis:7.0-alpine
     restart: always
@@ -111,6 +126,9 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
+    networks:
+      - scheduling
+
 networks:
   website:
     external: true
