--- a/result/server/pyproject.toml
+++ b/result/server/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "blockscrape_result_server"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+uvicorn = "^0.23.2"
 
 
 [tool.poetry.group.dev.dependencies]
