--- a/result/server/pyproject.toml
+++ b/result/server/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "blockscrape_result_server"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 uvicorn = "^0.23.2"
-
+redis = {extras = ["hiredis"], version = "^4.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^68.0.0"
