--- a/result/client/pyproject.toml
+++ b/result/client/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "blockscrape_result_client"}]
 python = "^3.10"
 pydantic = "^2.3.0"
 python-socketio = {extras = ["asyncclient"], version = "^5.9.0"}
+aiohttp = "^3.8.5"
 
 
 [tool.poetry.group.dev.dependencies]
