--- a/result/client/pyproject.toml
+++ b/result/client/pyproject.toml
@@ -9,8 +9,8 @@ packages = [{include = "blockscrape_result_client"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.3.0"
-python-socketio = {extras = ["asyncclient"], version = "^5.9.0"}
 aiohttp = "^3.8.5"
+python-socketio = {extras = ["client"], version = "^5.9.0"}
 
 
 [tool.poetry.group.dev.dependencies]
