--- a/authentitication/server/pyproject.toml
+++ b/authentitication/server/pyproject.toml
@@ -17,6 +17,7 @@ werkzeug = "^2.3.6"
 python-multipart = "^0.0.6"
 python-decouple = "^3.8"
 bcrypt = "^4.0.1"
+pyotp = "^2.9.0"
 
 
 [build-system]
