--- a/result/server/pyproject.toml
+++ b/result/server/pyproject.toml
@@ -12,6 +12,8 @@ redis = {extras = ["hiredis"], version = "^4.6.0"}
 python-socketio = "^5.9.0"
 pydantic = "^2.3.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+pika = "^1.3.2"
+eventlet = "^0.33.3"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^68.0.0"
