--- a/scheduling/manager/pyproject.toml
+++ b/scheduling/manager/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "scheduling"
+name = "manager"
 version = "0.1.0"
 description = ""
 authors = ["Simon <berndts.tin21@student.dhbw-heidenheim.de>"]
@@ -7,10 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-schedule = "^1.2.0"
-redis = "^4.6.0"
-cassandra-driver = "^3.28.0"
-pydantic = "^2.3.0"
+python-socketio = "^5.9.0"
+eventlet = "^0.33.3"
 
 
 [build-system]
