--- a/mining/server/pyproject.toml
+++ b/mining/server/pyproject.toml
@@ -13,6 +13,7 @@ python-socketio = "^5.8.0"
 pydantic = "^2.0.3"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 pika = "^1.3.2"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
