--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: '3.3'
 services:
-
+  traefik:
+    image: traefik:latest
+    ports:
+      - "99:99"
+      - "8080:8080"
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=traefik"
+      - "--entrypoints.main.address=:99"
+      - "--providers.docker.allowEmptyServices=true"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    networks:
+      - traefik
   cassandra:
     image: cassandra:latest
     restart: always
@@ -32,18 +47,25 @@ services:
     networks:
       - cassandra
 
-  react_ui:
+  react-ui:
     build: ./website/frontend/user-interface
     restart: always
     depends_on:
-      user_backend:
+      user-backend:
         condition: service_started
     networks:
       - website
+      - traefik
     deploy:
-        replicas: 1
+      replicas: 1
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.react-ui.entrypoints=main"
+      - "traefik.http.routers.react-ui.rule=PathPrefix(`/`)"
+      - "traefik.http.services.react-ui.loadbalancer.server.port=80"
+      - "traefik.docker.network=website"
 
-  user_backend:
+  user-backend:
     build: ./website/backend
     restart: always
     depends_on:
@@ -51,25 +73,34 @@ services:
         condition: service_healthy
       cassandra-load-keyspace:
         condition: service_completed_successfully
-      auth_service:
+      auth-service:
         condition: service_started
-      coin_service:
+      coin-service:
         condition: service_started
     command:
-      - "--authentication_uri=http://auth_service:7979"
+      - "--authentication_uri=http://auth-service:7979"
       - "--cassandra_uri=cassandra"
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
-      - "--coinservice_uri=http://coin_service:1337"
+      - "--coinservice_uri=http://coin-service:1337"
     networks:
       - website
       - coin
       - user_backend
+      - traefik
     deploy:
-        replicas: 1
+      replicas: 1
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.user-backend.entrypoints=main"
+      - "traefik.http.routers.user-backend.rule=PathPrefix(`/api`)"
+      - "traefik.http.services.user-backend.loadbalancer.server.port=6543"
+      - "traefik.http.middlewares.user-backend-stripprefix.stripprefix.prefixes=/api"
+      - "traefik.http.middlewares.user-backend-stripprefix.stripprefix.forceSlash=true"
+      - "traefik.http.routers.user-backend.middlewares=user-backend-stripprefix"
 
-  auth_service:
+  auth-service:
     build: ./authentitication/server
     restart: always
     depends_on:
@@ -87,7 +118,7 @@ services:
     deploy:
         replicas: 1
 
-  mining_server:
+  mining-server:
     build: ./mining/server
     networks:
       - mining_backend
@@ -95,8 +126,9 @@ services:
       - scheduling
       - rabbitmq_network
       - coin
+      - traefik
     command:
-      - "--redis_uri=scheduling_store"
+      - "--redis_uri=scheduling-store"
       - "--redis_port=6379"
       - "--rabbitMQ_uri=rabbitmq"
       - "--rabbitMQ_user=user"
@@ -104,16 +136,30 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+    deploy:
+      replicas: 1
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.mining-server.entrypoints=main"
+      - "traefik.http.routers.mining-server.rule=PathPrefix(`/miningServer`)"
+      - "traefik.http.services.mining-server.loadbalancer.sticky.cookie.name=stick"
+      - "traefik.http.services.mining-server.loadbalancer.server.port=8000"
+      # strip prefix
+      - "traefik.http.middlewares.mining-server-stripprefix.stripprefix.prefixes=/miningServer"
+      - "traefik.http.middlewares.mining-server-stripprefix.stripprefix.forceSlash=true"
+      - "traefik.http.routers.mining-server.middlewares=mining-server-stripprefix"
+      # - "traefik.backend.loadbalancer.stickiness=true"
 
-  result_server:
+  result-server:
     build: ./result/server
     networks:
       - mining_backend
       - mining
       - scheduling
       - rabbitmq_network
+      - traefik
     command:
-      - "--redis_uri=scheduling_store"
+      - "--redis_uri=scheduling-store"
       - "--redis_port=6379"
       - "--task_db_number=0"
       - "--socketio_db_number=1"
@@ -123,8 +169,20 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+    deploy:
+      replicas: 1
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.result-server.entrypoints=main"
+      - "traefik.http.routers.result-server.rule=PathPrefix(`/resultServer`)"
+      - "traefik.http.services.result-server.loadbalancer.sticky.cookie.name=stick"
+      - "traefik.http.services.result-server.loadbalancer.server.port=8000"
+        # strip prefix
+      - "traefik.http.middlewares.result-server-stripprefix.stripprefix.prefixes=/resultServer"
+      - "traefik.http.middlewares.result-server-stripprefix.stripprefix.forceSlash=true"
+      - "traefik.http.routers.result-server.middlewares=result-server-stripprefix"
 
-  scheduling_service:
+  scheduling-service:
     build: ./scheduling/server
     restart: always
     command:
@@ -132,7 +190,7 @@ services:
       - "--cassandra_port=9042"
       - "--cassandra_user=cassandra"
       - "--cassandra_passwd=cassandra"
-      - "--redis_uri=scheduling_store"
+      - "--redis_uri=scheduling-store"
       - "--redis_port=6379"
       - "--manager_uri=http://manager"
       - "--manager_port=666"
@@ -143,12 +201,12 @@ services:
         condition: service_healthy
       cassandra-load-keyspace:
         condition: service_completed_successfully
-      scheduling_store:
+      scheduling-store:
         condition: service_started
     deploy:
       replicas: 1
 
-  scheduling_store:
+  scheduling-store:
     image: redis:7.0-alpine
     restart: always
     environment:
@@ -161,7 +219,7 @@ services:
     networks:
       - scheduling
 
-  coin_service:
+  coin-service:
     build: ./coin
     command:
       - "--cassandra_uri=cassandra"
@@ -176,19 +234,19 @@ services:
     networks:
       - coin
 
-  nginx:
-    image: nginx:latest
-    ports:
-      - "99:99"
-    volumes:
-      - ./loadbalancer/nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - react_ui
-      - mining_server
-      - result_server
-    networks:
-      - website
-      - mining
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - "99:99"
+#    volumes:
+#      - ./loadbalancer/nginx/nginx.conf:/etc/nginx/nginx.conf
+#    depends_on:
+#      - react_ui
+#      - mining_server
+#      - result_server
+#    networks:
+#      - website
+#      - mining
 
   rabbitmq:
     image: "rabbitmq"
@@ -204,6 +262,7 @@ services:
       - rabbitmq_network
 
 networks:
+  traefik:
   website:
   scheduling:
   mining:
